@@ -1,3 +1,7 @@
+2011-01-21  Jeff Segars  <jeff@webempoweredchurch.org>
+
+	* Fixed bug #17129: Minor styling issues with live search
+
 2011-01-21  Steffen Gebert  <steffen@steffen-gebert.de>
 
 	* Fixed bug #17167: Cache ExtDirect::getAPI calls
